# spline-python-agent

./: .editorconfig  .gitignore  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: run-checks.yml  run-tests.yml
examples/: simple.py  simple_example.py  spline.yaml
src/spline_agent/: __init__.py  constants.py  context.py  datasources.py  decorator.py  exceptions.py  harvester.py  json_serde.py  lineage_model.py  object_factory.py  spline.default.yaml  utils.py
src/spline_agent/commons/: proxy.py
src/spline_agent/commons/configuration/: base_configuration.py  composite_configuration.py  configuration.py  dict_configuration.py  dynaconf_configuration.py  env_configuration.py
src/spline_agent/dispatchers/: http_dispatcher.py  logging_dispatcher.py
tests/: conftest.py  mocks.py  test_agent.py
tests/fixtures/: env_fixture.py
tests/spline_agent/: mocks.py  test_agent.py  test_object_factory.py
tests/spline_agent/commons/: test_proxy.py  test_utils.py
tests/spline_agent/commons/configuration/: test_configuration.py  test_configuration_dynaconf.settings.toml  test_configuration_settings.flat.yaml  test_configuration_settings.mixed_cases.yaml  test_configuration_settings.mixed_struct.yaml  test_configuration_settings.nested.yaml
tests/spline_agent/dispatchers/: test_logging_dispatcher.py
